Moved the table on top and clarified its description

--- a/index.html
+++ b/index.html
@@ -66,6 +66,17 @@
 		</section>
 		<section class="initially-hidden">
 			<hr />
+			<h2>IO Overview</h2>
+			<p>
+				Below is a representation of the inputs and outputs described in the code, these apply to the circuit below. This desribes the system to you so that you can integrate it with other systems in Survivalcraft.
+			</p>
+			<h3>Input</h3>
+			<div id="bank-input-type-table" class="horizontal-scroll"></div>
+			<h3>Output</h3>
+			<div id="bank-output-type-table" class="horizontal-scroll"></div>
+		</section>
+		<section class="initially-hidden">
+			<hr />
 			<h2>Circuit</h2>
 			<p>
 				Below is a representation of the circuit to be built in Survivalcraft to accomodate the generated system.
@@ -74,17 +85,6 @@
 				<svg version="2.0" id="reference-circuit" width="0" height="0"></svg>
 			</div>
 			<p>Feel free to simplify the circuit in your own implementation.</p>
-		</section>
-		<section class="initially-hidden">
-			<hr />
-			<h2>IO Overview</h2>
-			<p>
-				Below is a representation of the inputs and outputs of the circuit above, this desribes the system to you so that you can integrate it with other systems in Survivalcraft.
-			</p>
-			<h3>Input</h3>
-			<div id="bank-input-type-table" class="horizontal-scroll"></div>
-			<h3>Output</h3>
-			<div id="bank-output-type-table" class="horizontal-scroll"></div>
 		</section>
 		<section class="initially-hidden">
 			<hr />
