--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 			<button id="recursive-copy-button">Copy all (for Gboard or Clipboard-Stack)</button>
 			<button id="slower-recursive-copy-button">Copy all slowly (for windows+v)</button>
 			<p>
-				Copying all data requires software that can track clipboard changes like my 
+				Copying all data at once requires software that can track clipboard changes like my 
 				<a href="https://github.com/SP4CEBARsystems/clipboard-stack" target="_blank" rel="noopener noreferrer">Clipboard-Stack</a>
 				macro, Google's GBoard app or windows' clipboard history (aka windows + V).
 			</p>
