Changed the hyperlinks from the index page to open on a new tab

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 		<hr/>
 		<h1 class="inline">Memory Bank Generator For Survivalcraft</h1>
 		<p>
-			This tool allows you to easily program the data for <a href="https://survivalcraftgame.fandom.com/wiki/Memory_Bank">memory bank</a> systems in <a href="https://en.wikipedia.org/wiki/Survivalcraft">Survivalcraft</a>.
+			This tool allows you to easily program the data for <a href="https://survivalcraftgame.fandom.com/wiki/Memory_Bank" target="_blank" rel="noopener noreferrer">memory bank</a> systems in <a href="https://en.wikipedia.org/wiki/Survivalcraft" target="_blank" rel="noopener noreferrer">Survivalcraft</a>.
 		</p>
 	</header>
 	<main>
@@ -41,7 +41,7 @@
 		<section>
 			<h2>Code</h2>
 			<p>
-				Here you can type <a href="./docs.html#code">code</a> and <a href="./docs.html#types">parameters</a>.
+				Here you can type <a href="./docs.html#code" target="_blank" rel="noopener noreferrer">code</a> and <a href="./docs.html#types" target="_blank" rel="noopener noreferrer">parameters</a>.
 				Click generate to generate memory bank data, a representation of the circuit to build in Survivalcraft, and an overview table of the inputs and outputs of the circuit.
 			</p>
 			<div class="space-Below generator-input-params">
@@ -91,7 +91,7 @@
 			<h2>Generated Data</h2>
 			<p>
 				The data below should be copied and pasted into the Survivalcraft memory banks shown in the circuit above one by one. 
-				The <a href="./docs.html#bank-names">code-names</a> of these banks are also shown on the circuit.
+				The <a href="./docs.html#bank-names" target="_blank" rel="noopener noreferrer">code-names</a> of these banks are also shown on the circuit.
 			</p>
 			<button id="recursive-copy-button">Copy all (for Gboard or Clipboard-Stack)</button>
 			<button id="slower-recursive-copy-button">Copy all slowly (for windows+v)</button>
