Added the bank-names section to the docs index

--- a/docs.html
+++ b/docs.html
@@ -32,6 +32,7 @@
 				<li><a href="#code">Code</a></li>
 				<li><a href="#examples">Code Examples</a></li>
 				<li><a href="#types">Data Types</a></li>
+				<li><a href="#bank-names">Bank Names</a></li>
 				<li><a href="#data">Data</a></li>
 				<li><a href="#circuit">Generated Circuit</a></li>
 				<li><a href="#errors">Common Errors</a></li>
