Added a link to the docs on the circuit description

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 			<hr />
 			<h2>Circuit</h2>
 			<p>
-				Below is a representation of the circuit to be built in Survivalcraft to accomodate the generated system.
+				Below is a representation of the circuit to be built in Survivalcraft to accomodate the generated system. <a href="./docs.html#circuit" target="_blank" rel="noopener noreferrer">Read the docs</a> for more information.
 			</p>
 			<div class="horizontal-scroll">
 				<svg version="2.0" id="reference-circuit" width="0" height="0"></svg>
