Clarified various parts of the docs and index pages and improved punctuation.

--- a/docs.html
+++ b/docs.html
@@ -400,13 +400,13 @@ output sizes: 4</pre><pre class="code-block-root has-copy-btn"><code class="code
 		<section id="types">
 			<h2>Data Types</h2>
 			<p>
-				Each value may be split up into multiple smaller parameters of specific sizes in bits. Allowing you to
-				treat them separately.
+				Each value may be split up into multiple smaller parameters of specific sizes in bits. Allowing them to
+				be treated separately.
 				You can use the "input types" and "output types" fields to set the amount of parameters and their types
 				and sizes. This can be done by typing a numbers (sizes in bits) separated by commas, each number is a
-				parameter
+				parameter.
 
-				Instead of a number you may type a datatype, the code supports the following types:
+				Instead of a number you may type a datatype, the code supports the following datatypes:
 			<ol>
 				<h3>
 					<li>Unsigned Integer Types</li>
@@ -805,7 +805,7 @@ output sizes: 4</pre><pre class="code-block-root has-copy-btn"><code class="code
 					location</li>
 				Using this makes your ROM a selector ROM (a therm I made up but will be using throughout this site)
 			</ol>
-			When designing a system using this tool consider how many bits you really need as each <a
+			When designing a system using this tool, consider how many bits you really need as each <a
 				href="https://survivalcraftgame.fandom.com/wiki/Memory_Bank">SurvivalCraft memory bank</a> has an 8-bit
 			address input and a 4-bit output.
 			The amount of memory banks required is:
@@ -902,8 +902,8 @@ output sizes: 4</pre><pre class="code-block-root has-copy-btn"><code class="code
 		<section id="errors">
 			<h2>Common Errors</h2>
 			<p>
-				There are way too few error messages, if the code doesn't work, please replace the code with one of the
-				<a href="#examples">example programs</a>.
+				There are few error messages, shown to you. If the code you wrote in the code input field does not work, you could open your browsers web debugger to view if the site throws any errors in the console. Instead you could also replace the code with one of the
+				<a href="#examples">example programs</a> to figure out which parts of your code work and which do not.
 			</p>
 		</section>
 		<hr>
@@ -915,7 +915,7 @@ output sizes: 4</pre><pre class="code-block-root has-copy-btn"><code class="code
 				it, <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Guide/Introduction">develop</a> it
 				and make a <a
 					href="https://docs.github.com/en/pull-requests/collaborating-with-pull-requests/proposing-changes-to-your-work-with-pull-requests/creating-a-pull-request-from-a-fork">pull
-					request</a>. If I see it, it works, and I like it I will add it to this project.
+					request</a>. If I see it, it works, and I like it, I will add it to this project.
 			</p>
 		</section>
 	</main>
