--- a/index.html
+++ b/index.html
@@ -42,14 +42,14 @@
 			<h2>Code</h2>
 			<p>
 				Here you can type <a href="./docs.html#code" target="_blank" rel="noopener noreferrer">code</a> and <a href="./docs.html#types" target="_blank" rel="noopener noreferrer">parameters</a>.
-				Click generate to generate memory bank data, a representation of the circuit to build in Survivalcraft, and an overview table of the inputs and outputs of the circuit.
+				Click "generate" to generate memory bank data, a representation of the circuit to build in Survivalcraft, and an overview table of the inputs and outputs of the circuit.
 			</p>
 			<div class="space-Below generator-input-params">
-				<label for="amountInput">amount (scales linearly)</label>
+				<label for="amountInput">amount (banks required scales linearly)</label>
 				<input id="amount" name="amountInput" value="1" placeholder="1"></input>
-				<label for="inputSizesInput">input sizes or types (scales exponentially)</label>
+				<label for="inputSizesInput">input sizes or types (banks required scales exponentially)</label>
 				<input id="inputSizes" name="inputSizesInput" value="4, 4" placeholder="4, 4"></input>
-				<label for="outputSizesInput">output sizes or types (scales linearly)</label>
+				<label for="outputSizesInput">output sizes or types (banks required scales linearly)</label>
 				<input id="outputSizes" name="outputSizesInput" value="5" placeholder="8"></input>
 			</div>
 			<label for="codeInput">Code Input</label>
