Added the "Conditional (ternary) operator" to the "Relevant Javascript Documentation" in the docs to help readers understand the provided examples better

--- a/docs.html
+++ b/docs.html
@@ -95,6 +95,7 @@
 							Calculating</a></li>
 					<li><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Math">Math
 							Functions</a></li>
+					<li><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Operators/Conditional_operator">Conditional (ternary) operator</a> (you will see me use this a lot in the <a href="#examples">examples</a>)</li>
 				</ul>
 			</p>
 		</section>
