Changed one occurrence of "me" with more general therms

--- a/docs.html
+++ b/docs.html
@@ -89,13 +89,14 @@
 					types</a> and split over <a href="#data">digits</a>.
 				<h3>Relevant Javascript Documentation</h3>
 				<ul>
-					<li><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Guide/Introduction">Javascript</a>
-					</li>
-					<li><a href="https://developer.mozilla.org/en-US/docs/Learn_web_development/Core/Scripting/Math">Basic
-							Calculating</a></li>
-					<li><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Math">Math
-							Functions</a></li>
-					<li><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Operators/Conditional_operator">Conditional (ternary) operator</a> (you will see me use this a lot in the <a href="#examples">examples</a>)</li>
+					<li><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Guide/Introduction">
+						Javascript</a></li>
+					<li><a href="https://developer.mozilla.org/en-US/docs/Learn_web_development/Core/Scripting/Math">
+						Basic Calculating</a></li>
+					<li><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Math">
+						Math Functions</a></li>
+					<li><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Operators/Conditional_operator">
+						Conditional (ternary) operator</a> (you will see this be used a lot in the <a href="#examples">examples</a>)</li>
 				</ul>
 			</p>
 		</section>
