Update docs.html to clarify the function column of all rows in the bank names table

--- a/docs.html
+++ b/docs.html
@@ -782,7 +782,7 @@ output sizes: 4</pre><pre class="code-block-root has-copy-btn"><code class="code
 						<tr>
 							<td>L</td>
 							<td>location</td>
-							<td>the set of banks it is part of</td>
+							<td>Which set of banks this bank is part of</td>
 							<td>first set</td>
 							<td>second set</td>
 							<td>third set</td>
@@ -790,7 +790,7 @@ output sizes: 4</pre><pre class="code-block-root has-copy-btn"><code class="code
 						<tr>
 							<td>I</td>
 							<td>input</td>
-							<td>responsible for handling a set of 256 input values</td>
+							<td>Which set of 256 input values this bank will handle.</td>
 							<td>input values 0 to 255</td>
 							<td>input values 256 to 511</td>
 							<td>input values 512 to 767</td>
@@ -798,7 +798,7 @@ output sizes: 4</pre><pre class="code-block-root has-copy-btn"><code class="code
 						<tr>
 							<td>D</td>
 							<td>digit</td>
-							<td>to generate a set of four bits of the output</td>
+							<td>Which set of four bits in the output this bank will generate.</td>
 							<td>output bits 0 to 3</td>
 							<td>output bits 4 to 7</td>
 							<td>output bits 8 to 11</td>
