--- a/docs.html
+++ b/docs.html
@@ -18,7 +18,7 @@
 			<a href="./index.html" class="sp4cebank-image">
 				<img src="./assets/sp4cebar_memory_bank.png" alt="sp4cebar memory bank logo">				
 			</a>
-			<a href="./docs.html" class="selected">Documentation</a>
+			<a href="./docs.html" class="selected">Docs</a>
 		</nav>
 		<hr/>
 		<h1 class="inline">Documentation</h1>
