--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 			<a href="./index.html" class="sp4cebank-image selected">
 				<img src="./assets/sp4cebar_memory_bank.png" alt="sp4cebar memory bank logo">
 			</a>
-			<a href="./docs.html">Documentation</a>
+			<a href="./docs.html">Docs</a>
 		</nav>
 		<hr/>
 		<h1 class="inline">Memory Bank Generator For Survivalcraft</h1>
