--- a/index.html
+++ b/index.html
@@ -131,10 +131,8 @@
 	<footer>
 		<hr />
 		<aside>
-			<ul>
-				<li><a href="https://github.com/SP4CEBARsystems/SC-Bank-Generator/issues" target="_blank" rel="noopener noreferrer">Report Issue</a></li>
-				<li><a href="https://github.com/SP4CEBARsystems/SC-Bank-Generator" target="_blank" rel="noopener noreferrer">Contribute</a></li>
-			</ul>
+			<a href="https://github.com/SP4CEBARsystems/SC-Bank-Generator/issues" target="_blank" rel="noopener noreferrer">Report Issue</a>
+			<a href="https://github.com/SP4CEBARsystems/SC-Bank-Generator" target="_blank" rel="noopener noreferrer">Contribute</a>
 		</aside>
 	</footer>
 	<iframe id="sandbox" class="hidden" sandbox="allow-scripts"></iframe>
