Added a loading indicator to the presets and an error message when no presets where loaded

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 			<h2>Presets</h2>
 			<p>Click on one of the presets below to load its code and parameters.</p>
 			<div id="preset-selector">
+				<p class="loading-indicator">Loading presets...</p>
 			</div>
 		</section>
    <hr />
