added a copy button to the code snippet in docs.html#file-import

--- a/docs.html
+++ b/docs.html
@@ -930,9 +930,7 @@ output sizes: 4</pre><pre class="code-block-root has-copy-btn"><code class="code
 			<h2>File Importing</h2>
 		  	<p>
 				If you wanted to use files you could create a javascript array like shown below.
-<pre>
-const myFile = [];
-</pre>
+				<pre class="code-block-root has-copy-btn"><code class="code-block">const myFile = [];</code></pre>
 				Then you can paste a set of comma-separated-values between the square brackets, to get such values from a file I recommend using this
 				<a href="https://tomeko.net/online_tools/file_to_hex.php?lang=en">online file to hexadecimal number converter</a>. Leave the "Use 0x and comma as separator (C-like)" setting checked, uncheck "Insert newlines after each 16B" to keep your code block from becoming hard to scroll through, Upload the file you want to import, and click "copy output to clipboard". After which you can paste the data between the brackets in your code block.
 				Now your code can access the file data as an array of bytes (written in hexadecimal).
