updated the docs.html to allow the footer buttons to be bigger for accessibillity

--- a/docs.html
+++ b/docs.html
@@ -969,10 +969,8 @@ output sizes: 4</pre><pre class="code-block-root has-copy-btn"><code class="code
 	</main>
 	<footer>
 		<aside>
-			<ul>
-				<li><a href="https://github.com/SP4CEBARsystems/SC-Bank-Generator/issues">Report Issue</a></li>
-				<li><a href="https://github.com/SP4CEBARsystems/SC-Bank-Generator">Contribute</a></li>
-			</ul>
+			<a href="https://github.com/SP4CEBARsystems/SC-Bank-Generator/issues">Report Issue</a>
+			<a href="https://github.com/SP4CEBARsystems/SC-Bank-Generator">Contribute</a>
 		</aside>
 	</footer>
 	<script type="module" src="./js/docs.js"></script>
