--- a/index.html
+++ b/index.html
@@ -46,14 +46,17 @@
 				Click "generate" to generate memory bank data, a representation of the circuit to build in Survivalcraft, and an overview table of the inputs and outputs of the circuit.
 			</p>
 			<div class="space-Below generator-input-params">
-				<label for="amountInput">amount (banks required scales linearly)</label>
+				<label for="amountInput">amount <a href="./docs.html#amount-input" target="_blank" rel="noopener noreferrer">(?)</a></label>
 				<input id="amount" name="amountInput" value="1" placeholder="1"></input>
-				<label for="inputSizesInput">input sizes or types (banks required scales exponentially)</label>
+				<label for="inputSizesInput">input sizes or types <a href="./docs.html#input-sizes-input" target="_blank" rel="noopener noreferrer">(?)</a></label>
 				<input id="inputSizes" name="inputSizesInput" value="4, 4" placeholder="4, 4"></input>
-				<label for="outputSizesInput">output sizes or types (banks required scales linearly)</label>
+				<label for="outputSizesInput">output sizes or types <a href="./docs.html#output-sizes-input" target="_blank" rel="noopener noreferrer">(?)</a></label>
 				<input id="outputSizes" name="outputSizesInput" value="5" placeholder="8"></input>
 			</div>
-			<label for="codeInput">Code Input</label>
+			<label for="codeInput">
+				Code Input 
+				<a href="./docs.html#code" target="_blank" rel="noopener noreferrer">(?)</a>
+			</label>
 			<div>
 				<textarea id="codeInput" name="codeInput" cols="50" rows="20" wrap="off" placeholder="([x, y]) => {return [x + y];}"></textarea>
 			</div>
