fixed two occurrences of a typo

--- a/docs.html
+++ b/docs.html
@@ -110,7 +110,7 @@
 		<section id="location-index">
 			<h2>Location Index Parameter</h2>
 			<p>
-				The location index parameter represents the index of the memory bank set within the <a href="#code">code</a>. This parameter is only needed when you want to generate an array of memory banks with altertions depending on its index (this parameter). On this page, this is referred to as a <a href="#description">"Selector ROM"</a>.
+				The location index parameter represents the index of the memory bank set within the <a href="#code">code</a>. This parameter is only needed when you want to generate an array of memory banks with alterations depending on its index (this parameter). On this page, this is referred to as a <a href="#description">"Selector ROM"</a>.
 			</p>
 		</section>
 		<hr>
@@ -426,7 +426,7 @@ output sizes: 4</pre><pre class="code-block-root has-copy-btn"><code class="code
 		<section id="amount-input">
 			<h2>Amount Input</h2>
 			<p>
-				The <a href="./index.html#amount">amount input field</a> is a single number that represents the amount of memory bank sets to generate. Usually this should be left as "1" unless you want to generate an array of memory banks with altertions depending on its <a href="./docs.html#location-index">index</a>. On this page, this is referred to as a <a href="#description">"Selector ROM"</a>.
+				The <a href="./index.html#amount">amount input field</a> is a single number that represents the amount of memory bank sets to generate. Usually this should be left as "1" unless you want to generate an array of memory banks with alterations depending on its <a href="./docs.html#location-index">index</a>. On this page, this is referred to as a <a href="#description">"Selector ROM"</a>.
 				Note that the number of banks required scales linearly, <a href="#data">more information here</a>.
 			</p>
 		</section>
