moved the preset details to the presets section

--- a/index.html
+++ b/index.html
@@ -34,13 +34,13 @@
 			<div id="preset-selector">
 				<p class="loading-indicator">Loading presets...</p>
 			</div>
+			<h3 id="preset-name"></h3>
+			<p id="preset-description">No preset selected</p>
+			<p id="preset-type"></p>
 		</section>
-   <hr />
+   		<hr />
 		<section>
 			<h2>Code</h2>
-			<h3 id="preset-name"></h3>
-			<p id="preset-description"></p>
-			<p id="preset-type"></p>
 			<p>
 				Here you can type <a href="./docs.html#code" target="_blank" rel="noopener noreferrer">code</a> and <a href="./docs.html#types" target="_blank" rel="noopener noreferrer">parameters</a>.
 				Click "generate" to generate memory bank data, a representation of the circuit to build in Survivalcraft, and an overview table of the inputs and outputs of the circuit.
