added an id to each section of the index page

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 	</header>
 	<main>
 		<hr/>
-		<section>
+		<section id="presets">
 			<h2>Presets</h2>
 			<p>Click on one of the presets below to load its code and parameters.</p>
 			<div id="preset-selector">
@@ -39,7 +39,7 @@
 			<p id="preset-type"></p>
 		</section>
    		<hr />
-		<section>
+		<section id="code">
 			<h2>Code</h2>
 			<p>
 				Here you can type <a href="./docs.html#code" target="_blank" rel="noopener noreferrer">code</a> and <a href="./docs.html#types" target="_blank" rel="noopener noreferrer">parameters</a>.
@@ -68,7 +68,7 @@
 				<p id="bank-count-display"></p>
 			</div>
 		</section>
-		<section class="initially-hidden">
+		<section class="initially-hidden" id="overview">
 			<hr />
 			<h2>IO Overview</h2>
 			<p>
@@ -79,7 +79,7 @@
 			<h3>Output</h3>
 			<div id="bank-output-type-table" class="horizontal-scroll"></div>
 		</section>
-		<section class="initially-hidden">
+		<section class="initially-hidden" id="circuit">
 			<hr />
 			<h2>Circuit</h2>
 			<p>
@@ -90,7 +90,7 @@
 			</div>
 			<p>Feel free to simplify the circuit in your own implementation.</p>
 		</section>
-		<section class="initially-hidden">
+		<section class="initially-hidden" id="data">
 			<hr />
 			<h2>Generated Data</h2>
 			<p>
