--- a/index.html
+++ b/index.html
@@ -83,7 +83,10 @@
 			<hr />
 			<h2>Circuit</h2>
 			<p>
-				Below is a representation of the circuit to be built in Survivalcraft to accomodate the generated system. <a href="./docs.html#circuit" target="_blank" rel="noopener noreferrer">Read the docs</a> for more information.
+				Below is a representation of the circuit to be built in Survivalcraft to accomodate the generated system.
+				Wire labels refer to the <a href="#overview">overview table above</a>, <a href="./docs.html#bank-names" target="_blank" rel="noopener noreferrer">memory bank labels</a> refer to the <a href="#data">data below</a> apart from the labels "4-bit Multiplexer" and "8-bit Selector", these refer to presets with the same name.
+				<a href="./docs.html#circuit" target="_blank" rel="noopener noreferrer">Read the docs</a> for more information.
+				<!-- The <a href="./docs.html#bank-names" target="_blank" rel="noopener noreferrer">code-names</a> of the memory banks shown allow you to look up this memory bank in the <a href="#data">data below</a> to find the data that it should contain. -->
 			</p>
 			<div class="horizontal-scroll">
 				<svg version="2.0" id="reference-circuit" width="0" height="0"></svg>
