structured the circuit section in the docs

--- a/docs.html
+++ b/docs.html
@@ -947,7 +947,9 @@ output sizes: 4</pre><pre class="code-block-root has-copy-btn"><code class="code
 			<p>
 				A circuit is generated alongside the data.
 				Wire labels refer to the overview table shown after generating, <a href="#bank-names">memory bank labels</a> refer to the generated data apart from the labels <a href="#labels-preset">"4-bit Multiplexer" and "8-bit Selector"</a>, these refer to presets with the same name.
-				
+			</p>
+			<h3>Image Artifacts</h3>
+			<p>
 				The image is made up of multiple screenshots from SurvivalCraft stitched together and may cause some
 				slight graphical artifacts as seen below. The circuit part shown in that image may be treated as a
 				single trench with a wire in it.
