added a hyperlink to docs.html#labels-preset

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 			<h2>Circuit</h2>
 			<p>
 				Below is a representation of the circuit to be built in Survivalcraft to accomodate the generated system.
-				Wire labels refer to the <a href="#overview">overview table above</a>, <a href="./docs.html#bank-names" target="_blank" rel="noopener noreferrer">memory bank labels</a> refer to the <a href="#data">data below</a> apart from the labels "4-bit Multiplexer" and "8-bit Selector", these refer to presets with the same name.
+				Wire labels refer to the <a href="#overview">overview table above</a>, <a href="./docs.html#bank-names" target="_blank" rel="noopener noreferrer">memory bank labels</a> refer to the <a href="#data">data below</a> apart from the labels <a href="./docs.html#labels-preset" target="_blank" rel="noopener noreferrer">"4-bit Multiplexer" and "8-bit Selector"</a>, these refer to presets with the same name.
 				<a href="./docs.html#circuit" target="_blank" rel="noopener noreferrer">Read the docs</a> for more information.
 				<!-- The <a href="./docs.html#bank-names" target="_blank" rel="noopener noreferrer">code-names</a> of the memory banks shown allow you to look up this memory bank in the <a href="#data">data below</a> to find the data that it should contain. -->
 			</p>
