--- a/index.html
+++ b/index.html
@@ -27,39 +27,47 @@
 		</p>
 	</header>
 	<main>
-		<hr/>
 		<section id="presets">
-			<h2>Presets</h2>
-			<p>Click on one of the presets below to load its code and parameters.</p>
-			<div id="preset-selector">
-				<p class="loading-indicator">Loading presets...</p>
-			</div>
-			<h3 id="preset-name"></h3>
-			<p id="preset-description">No preset selected</p>
-			<p id="preset-type"></p>
+			<hr/>
+			<details open>
+				<summary>
+					<h2>Presets</h2>
+				</summary>
+				<p>Click on one of the presets below to load its code and parameters.</p>
+				<div id="preset-selector">
+					<p class="loading-indicator">Loading presets...</p>
+				</div>
+				<h3 id="preset-name"></h3>
+				<p id="preset-description">No preset selected</p>
+				<p id="preset-type"></p>
+			</details>
 		</section>
-   		<hr />
 		<section id="code">
-			<h2>Code</h2>
-			<p>
-				Here you can type <a href="./docs.html#code" target="_blank" rel="noopener noreferrer">code</a> and <a href="./docs.html#types" target="_blank" rel="noopener noreferrer">parameters</a>.
-				Click "generate" to generate memory bank data, a representation of the circuit to build in Survivalcraft, and an overview table of the inputs and outputs of the circuit.
-			</p>
-			<div class="space-Below generator-input-params">
-				<label for="amountInput">amount <a href="./docs.html#amount-input" target="_blank" rel="noopener noreferrer">(?)</a></label>
-				<input id="amount" name="amountInput" value="1" placeholder="1"></input>
-				<label for="inputSizesInput">input sizes or types <a href="./docs.html#input-sizes-input" target="_blank" rel="noopener noreferrer">(?)</a></label>
-				<input id="inputSizes" name="inputSizesInput" value="4, 4" placeholder="4, 4"></input>
-				<label for="outputSizesInput">output sizes or types <a href="./docs.html#output-sizes-input" target="_blank" rel="noopener noreferrer">(?)</a></label>
-				<input id="outputSizes" name="outputSizesInput" value="5" placeholder="8"></input>
-			</div>
-			<label for="codeInput">
-				Code Input 
-				<a href="./docs.html#code" target="_blank" rel="noopener noreferrer">(?)</a>
-			</label>
-			<div>
-				<textarea id="codeInput" name="codeInput" cols="50" rows="20" wrap="off" placeholder="([x, y]) => {return [x + y];}"></textarea>
-			</div>
+			<hr/>
+			<details>
+				<summary>
+					<h2>Code</h2>
+				</summary>
+				<p>
+					Here you can type <a href="./docs.html#code" target="_blank" rel="noopener noreferrer">code</a> and <a href="./docs.html#types" target="_blank" rel="noopener noreferrer">parameters</a>.
+					Click "generate" to generate memory bank data, a representation of the circuit to build in Survivalcraft, and an overview table of the inputs and outputs of the circuit.
+				</p>
+				<div class="space-Below generator-input-params">
+					<label for="amountInput">amount <a href="./docs.html#amount-input" target="_blank" rel="noopener noreferrer">(?)</a></label>
+					<input id="amount" name="amountInput" value="1" placeholder="1"></input>
+					<label for="inputSizesInput">input sizes or types <a href="./docs.html#input-sizes-input" target="_blank" rel="noopener noreferrer">(?)</a></label>
+					<input id="inputSizes" name="inputSizesInput" value="4, 4" placeholder="4, 4"></input>
+					<label for="outputSizesInput">output sizes or types <a href="./docs.html#output-sizes-input" target="_blank" rel="noopener noreferrer">(?)</a></label>
+					<input id="outputSizes" name="outputSizesInput" value="5" placeholder="8"></input>
+				</div>
+				<label for="codeInput">
+					Code Input 
+					<a href="./docs.html#code" target="_blank" rel="noopener noreferrer">(?)</a>
+				</label>
+				<div>
+					<textarea id="codeInput" name="codeInput" cols="50" rows="20" wrap="off" placeholder="([x, y]) => {return [x + y];}"></textarea>
+				</div>
+			</details>
 			<button id="generate-button">Generate</button>
 			<div class="initially-hidden">
 				<p id="bank-statistics"></p>
@@ -69,45 +77,57 @@
 			</div>
 		</section>
 		<section class="initially-hidden" id="overview">
-			<hr />
-			<h2>IO Overview</h2>
-			<p>
-				Below is a representation of the inputs and outputs described in the code, these apply to the circuit below. This desribes the system to you so that you can integrate it with other systems in Survivalcraft.
-			</p>
-			<h3>Input</h3>
-			<div id="bank-input-type-table" class="horizontal-scroll"></div>
-			<h3>Output</h3>
-			<div id="bank-output-type-table" class="horizontal-scroll"></div>
+			<hr/>
+			<details>
+				<summary>
+					<h2>IO Overview</h2>
+				</summary>
+				<p>
+					Below is a representation of the inputs and outputs described in the code, these apply to the circuit below. This desribes the system to you so that you can integrate it with other systems in Survivalcraft.
+				</p>
+				<h3>Input</h3>
+				<div id="bank-input-type-table" class="horizontal-scroll"></div>
+				<h3>Output</h3>
+				<div id="bank-output-type-table" class="horizontal-scroll"></div>
+			</details>
 		</section>
 		<section class="initially-hidden" id="circuit">
 			<hr />
-			<h2>Circuit</h2>
-			<p>
-				Below is a representation of the circuit to be built in Survivalcraft to accomodate the generated system.
-				Wire labels refer to the <a href="#overview">overview table above</a>, <a href="./docs.html#bank-names" target="_blank" rel="noopener noreferrer">memory bank labels</a> refer to the <a href="#data">data below</a> apart from the labels <a href="./docs.html#labels-preset" target="_blank" rel="noopener noreferrer">"4-bit Multiplexer" and "8-bit Selector"</a>, these refer to presets with the same name.
-				<a href="./docs.html#circuit" target="_blank" rel="noopener noreferrer">Read the docs</a> for more information.
-				<!-- The <a href="./docs.html#bank-names" target="_blank" rel="noopener noreferrer">code-names</a> of the memory banks shown allow you to look up this memory bank in the <a href="#data">data below</a> to find the data that it should contain. -->
-			</p>
-			<div class="horizontal-scroll">
-				<svg version="2.0" id="reference-circuit" width="0" height="0"></svg>
-			</div>
-			<p>Feel free to simplify the circuit in your own implementation.</p>
+			<details>
+				<summary>
+					<h2>Circuit</h2>
+				</summary>
+				<p>
+					Below is a representation of the circuit to be built in Survivalcraft to accomodate the generated system.
+					Wire labels refer to the <a href="#overview">overview table above</a>, <a href="./docs.html#bank-names" target="_blank" rel="noopener noreferrer">memory bank labels</a> refer to the <a href="#data">data below</a> apart from the labels <a href="./docs.html#labels-preset" target="_blank" rel="noopener noreferrer">"4-bit Multiplexer" and "8-bit Selector"</a>, these refer to presets with the same name.
+					<a href="./docs.html#circuit" target="_blank" rel="noopener noreferrer">Read the docs</a> for more information.
+					<!-- The <a href="./docs.html#bank-names" target="_blank" rel="noopener noreferrer">code-names</a> of the memory banks shown allow you to look up this memory bank in the <a href="#data">data below</a> to find the data that it should contain. -->
+				</p>
+				<div class="horizontal-scroll">
+					<svg version="2.0" id="reference-circuit" width="0" height="0"></svg>
+				</div>
+				<p>Feel free to simplify the circuit in your own implementation.</p>
+			</details>
 		</section>
 		<section class="initially-hidden" id="data">
 			<hr />
-			<h2>Generated Data</h2>
-			<p>
-				The data below should be copied and pasted into the Survivalcraft memory banks shown in the circuit above one by one. 
-				The <a href="./docs.html#bank-names" target="_blank" rel="noopener noreferrer">code-names</a> of these banks are also shown on the circuit.
-			</p>
-			<button id="recursive-copy-button">Copy all (for Gboard or Clipboard-Stack)</button>
-			<button id="slower-recursive-copy-button">Copy all slowly (for windows+v)</button>
-			<p>
-				Copying all data at once requires software that can track clipboard changes like my 
-				<a href="https://github.com/SP4CEBARsystems/clipboard-stack" target="_blank" rel="noopener noreferrer">Clipboard-Stack</a>
-				macro, Google's GBoard app or windows' clipboard history (aka windows + V).
-			</p>
-			<div id="bank-data-output"></div>
+			<details>
+				<summary>
+					<h2>Generated Data</h2>
+				</summary>
+				<p>
+					The data below should be copied and pasted into the Survivalcraft memory banks shown in the circuit above one by one. 
+					The <a href="./docs.html#bank-names" target="_blank" rel="noopener noreferrer">code-names</a> of these banks are also shown on the circuit.
+				</p>
+				<button id="recursive-copy-button">Copy all (for Gboard or Clipboard-Stack)</button>
+				<button id="slower-recursive-copy-button">Copy all slowly (for windows+v)</button>
+				<p>
+					Copying all data at once requires software that can track clipboard changes like my 
+					<a href="https://github.com/SP4CEBARsystems/clipboard-stack" target="_blank" rel="noopener noreferrer">Clipboard-Stack</a>
+					macro, Google's GBoard app or windows' clipboard history (aka windows + V).
+				</p>
+				<div id="bank-data-output"></div>
+			</details>
 		</section>
 		
 		<!-- define symbol in hidden svg document -->
